Merge UpdateTask and BatchedTask
UpdateTask was the only subclass.
Merging the two lets us type the batchingKey as
`ClusterStateTaskExecutor<?>` instead of `Object`.